--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "hardhat": "^2.22.10"
   },
   "dependencies": {
+    "@openzeppelin/contracts": "^5.0.2",
     "csv-parser": "^3.0.0",
     "dotenv": "^16.4.5",
     "keccak256": "^1.0.6",
